--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h3 class="mb-5">
         <em>Front-end Software Developer</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Who Am I?</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -65,7 +65,8 @@
         <div class="col-lg-10 mx-auto">
           <h2>About</h2>
           <p class="lead mb-5">Actively searching for entry-level / junior software and web (UX / UI) development positions in the Portland Metropolitan Area. Proficient with JavaScript, Python, Ruby/Rails, CSS, Sass, jQuery, React, Node.js, Popper.js, Bootstrap 4, AJAX, XML, JSON, OOP, API, DOM, SVG, HTML. Open to all software development opportunities.</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">Portfolio</a>
+          <a class="btn btn-dark btn-xl" href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank">View Resume</a>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">My Creations...</a>
         </div>
       </div>
     </div>
@@ -86,7 +87,7 @@
                 <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+            <img class="img-fluid" src="img/project1.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -97,7 +98,7 @@
                 <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+            <img class="img-fluid" src="img/project2.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -108,7 +109,7 @@
                 <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+            <img class="img-fluid" src="img/project3.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -119,7 +120,7 @@
                 <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+            <img class="img-fluid" src="img/project4.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -130,7 +131,7 @@
                 <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+            <img class="img-fluid" src="img/project5.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -141,7 +142,7 @@
                 <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+            <img class="img-fluid" src="img/project6.png" alt="">
           </a>
         </div>
       </div>
@@ -151,7 +152,7 @@
   <!-- Call to Action -->
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
-      <h2 class="mb-4">Contact</h2>
+      <h2 class="mb-4" id="contact">Contact</h2>
       <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
       <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
     </div>
@@ -164,11 +165,6 @@
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="https://teamtreehouse.com/chriscouch2" target="_blank">
             <i class="icon-social-facebook"></i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#" target="_blank">
-            <i class="icon-social-twitter"></i>
           </a>
         </li>
         <li class="list-inline-item">
