--- a/index.html
+++ b/index.html
@@ -80,66 +80,66 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_2/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Stationary</h2>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <h2>Custom Portfolio</h2>
+                <p class="mb-0">asdf</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project1.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_3/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Ice Cream</h2>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <h2>Newsletter Signup</h2>
+                <p class="mb-0">asdf</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project2.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_4/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Strawberries</h2>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <h2>Sass Test Site</h2>
+                <p class="mb-0">asdf</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project3.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_6/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2>Hangman Game</h2>
+                <p class="mb-0">adsf</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project4.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_7-reuploaded/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2>Information Dashboard</h2>
+                <p class="mb-0">adsf</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project5.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_8/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2>Employee Directory</h2>
+                <p class="mb-0">asdf</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project6.png" alt="">
