--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/stylish-portfolio.css" rel="stylesheet">
+  <link href="custom.css" rel="stylesheet">
 
 </head>
 
@@ -190,7 +190,7 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/stylish-portfolio.min.js"></script>
+  <script src="custom.js"></script>
 
 </body>
 
