--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
   </header>
 
   <!-- About -->
-  <section class="content-section bg-light" id="about">
+  <section class="content-section bg-info" id="about">
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2>About</h2>
           <p class="lead mb-5">Actively searching for entry-level / junior software and web (UX / UI) development positions in the Portland Metropolitan Area. Proficient with JavaScript, Python, Ruby/Rails, CSS, Sass, jQuery, React, Node.js, Popper.js, Bootstrap 4, AJAX, XML, JSON, OOP, API, DOM, SVG, HTML. Open to all software development opportunities.</p>
-          <a class="btn btn-dark btn-xl" href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank">View Resume</a>
+          <a class="btn btn-light btn-xl mr-4" href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank">View Resume</a>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">My Creations...</a>
         </div>
       </div>
@@ -153,8 +153,8 @@
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
       <h2 class="mb-4" id="contact">Contact</h2>
-      <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
-      <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
+      <a href= "mailto: chrissofa22@gmail.com" class="btn btn-xl btn-dark mr-4">Email Me!</a>
+      <a href="#" class="btn btn-xl btn-light">LinkedIn Message...</a>
     </div>
   </section>
 
