--- a/index.html
+++ b/index.html
@@ -149,27 +149,40 @@
     </div>
   </section>
 
-  <!-- Call to Action -->
-  <section class="content-section bg-primary text-white">
-    <div class="container text-center">
-      <h2 class="mb-4" id="contact">Contact</h2>
-      <a href= "mailto: chrissofa22@gmail.com" class="btn btn-xl btn-dark mr-4">Email Me!</a>
-      <a href="#" class="btn btn-xl btn-light">LinkedIn Message...</a>
-    </div>
-  </section>
-
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
+      <h2 class="mb-4" id="contact">Contact</h2>
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="https://teamtreehouse.com/chriscouch2" target="_blank">
-            <i class="icon-social-facebook"></i>
+            <a class="social-link text-white mr-3" href="mailto:chrissofa22@gmail.com ?subject=Buisness%20Inquiry,%20Christopher%20Couch">
+              <i><svg xmlns="http://www.w3.org/2000/svg"
+                aria-label="Gmail" role="img"
+                viewBox="0 0 512 512"><rect
+                width="512" height="512"
+                rx="15%"
+                fill="#fff"/><rect width="362" height="272" x="75" y="120" fill="#f2f2f2" rx="8%"/><path fill="#d54c3f" d="M120 392H97c-12 0-22-10-22-23V143h45z"/><path fill="#b63524" d="M392 392h23c12 0 22-10 22-23V143h-45z"/><path fill-opacity=".05" d="M256 286L120 392V187z"/><path fill-opacity=".08" d="M82 159l235 233h75V159z"/><path stroke-linecap="round" fill="none" stroke="#de5145" stroke-width="45" d="M97 143l159 115 159-115"/><path fill="#f2f2f2" d="M415 120c-5 0-10 2-13 4L256 230 110 124c-3-2-8-4-13-4z"/></svg></i>
+            </a>
+          </li>
+        <li class="list-inline-item">
+          <a class="social-link text-white mr-3" href="https://www.linkedin.com/in/christopher-couch-287048125/" target="_blank">
+            <i><svg xmlns="http://www.w3.org/2000/svg"
+              aria-label="LinkedIn" role="img"
+              viewBox="0 0 512 512"
+              fill="#fff"><rect
+              width="512" height="512"
+              rx="15%"
+              fill="#0077b5"/><circle cx="142" cy="138" r="37"/><path stroke="#fff" stroke-width="66" d="M244 194v198M142 194v198"/><path d="M276 282c0-20 13-40 36-40 24 0 33 18 33 45v105h66V279c0-61-32-89-76-89-34 0-51 19-59 32"/></svg></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="https://github.com/chrissofa22" target="_blank">
-            <i class="icon-social-github"></i>
+          <a class="social-link text-white" href="https://github.com/chrissofa22" target="_blank">
+            <i><svg xmlns="http://www.w3.org/2000/svg"
+              aria-label="GitHub" role="img"
+              viewBox="0 0 512 512"><rect
+              width="512" height="512"
+              rx="15%"
+              fill="#1B1817"/><path fill="#fff" d="M335 499c14 0 12 17 12 17H165s-2-17 12-17c13 0 16-6 16-12l-1-50c-71 16-86-28-86-28-12-30-28-37-28-37-24-16 1-16 1-16 26 2 40 26 40 26 22 39 59 28 74 22 2-17 9-28 16-35-57-6-116-28-116-126 0-28 10-51 26-69-3-6-11-32 3-67 0 0 21-7 70 26 42-12 86-12 128 0 49-33 70-26 70-26 14 35 6 61 3 67 16 18 26 41 26 69 0 98-60 120-117 126 10 8 18 24 18 48l-1 70c0 6 3 12 16 12z"/></svg></i>
           </a>
         </li>
       </ul>
