--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </header>
 
   <!-- About -->
-  <section class="content-section bg-info" id="about">
+  <section class="content-section" id="about">
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
@@ -178,7 +178,7 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link text-white" href="https://github.com/chrissofa22" target="_blank">
+          <a class="social-link text-white" href="https://github.com/christophercouch" target="_blank">
             <i><svg xmlns="http://www.w3.org/2000/svg"
               aria-label="GitHub" role="img"
               viewBox="0 0 512 512"><rect
