--- a/index.html
+++ b/index.html
@@ -49,15 +49,14 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead d-flex">
+  <header class="masthead d-flex bg-black">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">Christopher Couch</h1>
-      <h3 class="mb-5">
+      <h1 class="mb-1 text-white">Christopher Couch</h1>
+      <h3 class="mb-5 text-white">
         <em>Front-end Software Developer</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Who Am I?</a>
     </div>
-    <div class="overlay"></div>
   </header>
 
   <!-- About -->
@@ -65,8 +64,8 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>About</h2>
-          <p class="lead mb-5">Actively searching for entry-level / junior software and web (UX / UI) development positions in the Portland Metropolitan Area. Proficient with JavaScript, Python, Ruby/Rails, CSS, Sass, jQuery, React, Node.js, Popper.js, Bootstrap 4, AJAX, XML, JSON, OOP, API, DOM, SVG, HTML. Open to all software development opportunities.</p>
+          <h2 class="text-white">About</h2>
+          <p class="lead mb-5 text-white">Actively searching for entry-level / junior software and web (UX / UI) development positions in the Portland Metropolitan Area. Proficient with JavaScript, Python, Ruby/Rails, CSS, Sass, jQuery, React, Node.js, Popper.js, Bootstrap 4, AJAX, XML, JSON, OOP, API, DOM, SVG, HTML. Open to all software development opportunities.</p>
           <a class="btn btn-light btn-xl mr-4" href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank">View Resume</a>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">My Creations...</a>
         </div>
