--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link href="custom.css" rel="stylesheet">
@@ -51,7 +53,7 @@
   <!-- Header -->
   <header class="masthead d-flex bg-black">
     <div class="container text-center my-auto">
-      <h1 class="mb-1 text-white">Christopher Couch</h1>
+      <h1 class="mb-1 text-white">CHRISTOPHER COUCH</h1>
       <h3 class="mb-5 text-white">
         <em>Front-end Software Developer</em>
       </h3>
