--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dokdo&display=swap" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link href="custom.css" rel="stylesheet">
@@ -36,16 +36,16 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Christopher Couch</a>
+        <a class="js-scroll-trigger" href="#page-top"></a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">About</a>
+        <a class="js-scroll-trigger text-white" href="#about">About</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+        <a class="js-scroll-trigger text-white" href="#portfolio">Portfolio</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
+        <a class="js-scroll-trigger text-white" href="#contact">Contact</a>
       </li>
     </ul>
   </nav>
@@ -54,10 +54,7 @@
   <header class="masthead d-flex bg-black">
     <div class="container text-center my-auto">
       <h1 class="mb-1 text-white">CHRISTOPHER COUCH</h1>
-      <h3 class="mb-5 text-white">
-        <em>Front-end Software Developer</em>
-      </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Who Am I?</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">psyche</a>
     </div>
   </header>
 
