--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <a class="js-scroll-trigger" href="#page-top"></a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger text-white" href="#about">About</a>
+        <a class="js-scroll-trigger text-white" href="#about">ABOUT</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger text-white" href="#portfolio">Portfolio</a>
+        <a class="js-scroll-trigger text-white" href="#portfolio">PORTFOLIO</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger text-white" href="#contact">Contact</a>
+        <a class="js-scroll-trigger text-white" href="#contact">CONTACT</a>
       </li>
     </ul>
   </nav>
