--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <a class="js-scroll-trigger" href="#page-top"></a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger text-white" href="#about">ABOUT</a>
+        <a class="js-scroll-trigger text-white bg-dark" href="#about">ABOUT</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger text-white" href="#portfolio">PORTFOLIO</a>
+        <a class="js-scroll-trigger text-white bg-dark" href="#portfolio">PORTFOLIO</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger text-white" href="#contact">CONTACT</a>
+        <a class="js-scroll-trigger text-white bg-dark" href="#contact">CONTACT</a>
       </li>
     </ul>
   </nav>
@@ -63,7 +63,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2 class="text-white">About</h2>
+          <h2 class="text-white">ABOUT</h2>
           <p class="lead mb-5 text-white">Actively searching for entry-level / junior software and web (UX / UI) development positions in the Portland Metropolitan Area. Proficient with JavaScript, Python, Ruby/Rails, CSS, Sass, jQuery, React, Node.js, Popper.js, Bootstrap 4, AJAX, XML, JSON, OOP, API, DOM, SVG, HTML. Open to all software development opportunities.</p>
           <a class="btn btn-light btn-xl mr-4" href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank">View Resume</a>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">My Creations...</a>
@@ -76,7 +76,7 @@
   <section class="content-section" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h2 class="mb-5">Portfolio</h2>
+        <h2 class="mb-5">PORTFOLIO</h2>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
@@ -152,7 +152,7 @@
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
-      <h2 class="mb-4" id="contact">Contact</h2>
+      <h2 class="mb-4" id="contact">CONTACT</h2>
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
             <a class="social-link text-white mr-3" href="mailto:chrissofa22@gmail.com ?subject=Buisness%20Inquiry,%20Christopher%20Couch">
