--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </header>
 
   <!-- About -->
-  <section class="content-section" id="about">
+  <section class="masthead d-flex bg-black" id="about">
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
@@ -150,7 +150,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer masthead d-flex bg-black text-center">
     <div class="container">
       <h2 class="mb-4" id="contact">CONTACT</h2>
       <ul class="list-inline mb-5">
@@ -186,8 +186,11 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Christopher Couch 2019</p>
     </div>
+  </footer>
+
+  <footer>
+      <p class="text-muted small mb-0">Copyright &copy; Christopher Couch 2019</p>
   </footer>
 
   <!-- Scroll to Top Button-->
