--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_2/" target="_blank">
+          <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_2/" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Custom Portfolio</h2>
@@ -91,7 +91,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_3/" target="_blank">
+          <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_3/" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Newsletter Signup</h2>
@@ -102,7 +102,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_4/" target="_blank">
+          <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_4/" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Sass Test Site</h2>
@@ -113,7 +113,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_6/" target="_blank">
+          <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_6/" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Hangman Game</h2>
@@ -124,7 +124,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_7-reuploaded/" target="_blank">
+          <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_7-reuploaded/" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Information Dashboard</h2>
@@ -135,7 +135,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://chrissofa22.github.io/FEWD_Project_8/" target="_blank">
+          <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_8/" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Employee Directory</h2>
