--- a/index.html
+++ b/index.html
@@ -195,6 +195,26 @@
               fill="#fff"/><linearGradient id="a" x1="256" x2="256" y1="78.2" y2="441.2" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#00B2FF"/><stop offset="1" stop-color="#006AFF"/></linearGradient><path fill="url(#a)" d="M256 78.2c-102.4 0-181.8 75-181.8 176.4 0 53 21.7 98.8 57 130.4a14.7 14.7 0 0 1 5 10.4l1 32.3a14.6 14.6 0 0 0 20.4 12.9l36-16a14.5 14.5 0 0 1 9.8-.7 197.8 197.8 0 0 0 52.6 7c102.4 0 181.8-75 181.8-176.3S358.4 78.2 256 78.2z"/><path fill="#fff" d="M146.8 306.1l53.4-84.7a27.3 27.3 0 0 1 39.5-7.3l42.5 31.9a11 11 0 0 0 13 0l57.5-43.6c7.6-5.8 17.6 3.4 12.5 11.5l-53.4 84.7a27.3 27.3 0 0 1-39.4 7.3L229.9 274a11 11 0 0 0-13.2 0l-57.4 43.6c-7.6 5.8-17.6-3.4-12.5-11.5z"/></svg></i>
           </a>
         </li>
+        <li class="list-inline-item">
+          <a class="social-link text-white mr-3" href="tel:1-916-461-3955" target="_blank">
+            <i><svg xmlns="http://www.w3.org/2000/svg"
+              aria-label="Phone" role="img"
+              viewBox="0 0 512 512"><rect
+              width="512" height="512"
+              rx="15%"
+              fill="#20df40"/><path fill="#fff" d="M395 338c-10-9-22-17-33-23-23-16-43-17-59 6-10 14-23 16-37 10-39-18-68-43-84-82-8-16-8-31 10-42 9-6 19-14 18-28-1-18-44-78-62-84-8-2-14-2-22 0-41 14-57 46-42 85a451 451 0 0 0 251 248l17 5c26 0 57-25 67-50 9-24-10-34-24-45z"/><path fill="none" stroke="#fff" stroke-linecap="round" stroke-width="17" d="M268 138s41-1 72 30c31 30 27 74 27 74m-87-63s18-2 33 14c15 15 13 34 13 34M255 98s64-3 111 44c47 48 43 114 43 114"/></svg></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link text-white mr-3" href="Terminal 5304#2240" target="_blank">
+            <i><svg xmlns="http://www.w3.org/2000/svg"
+              aria-label="Discord" role="img"
+              viewBox="0 0 512 512"
+              fill="#7289da"><rect
+              width="512" height="512"
+              rx="15%"/><path d="m346 392-21-25c41-11 57-39 57-39-52 49-194 51-249 0 0 0 14 26 56 39l-23 25c-70-1-97-48-97-48 0-104 46-187 46-187 47-33 90-33 90-33l3 4c-58 16-83 42-83 42 68-46 208-42 263 0 1-1-33-28-86-42l5-4s43 0 90 33c0 0 46 83 46 187 0 0-27 47-97 48z" fill="#fff"/><ellipse cx="196" cy="279" rx="33" ry="35"/><ellipse cx="312" cy="279" rx="33" ry="35"/></svg></i>
+          </a>
+        </li>
       </ul>
     </div>
   </footer>
