--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Custom Portfolio</h2>
-                <p class="mb-0">asdf</p>
+                <p class="mb-0">Mobile-first layout using just HTML and CSS. Responsive design for all screen sizes. Use of PNGs and JPGs.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project1.png" alt="">
@@ -95,7 +95,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Newsletter Signup</h2>
-                <p class="mb-0">asdf</p>
+                <p class="mb-0">Mobile-first responsive registration form built with HTML and CSS.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project2.png" alt="">
