--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Custom Portfolio</h2>
-                <p class="mb-0">Mobile-first layout using just HTML and CSS. Responsive design for all screen sizes. Use of PNGs and JPGs.</p>
+                <p class="mb-0">Mobile-first layout using just HTML and CSS. Responsive design for all screen sizes. Understanding of PNGs and JPGs.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project1.png" alt="">
@@ -106,7 +106,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Sass Test Site</h2>
-                <p class="mb-0">asdf</p>
+                <p class="mb-0">Built with HTML and CSS(SCSS). Converted CSS into Sass partial files. Repeated values stored in Sass variables. Developed a Sass micro-framework.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project3.png" alt="">
@@ -117,7 +117,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Hangman Game</h2>
-                <p class="mb-0">adsf</p>
+                <p class="mb-0">A word guessing game with on-screen keyboard and random phrases. Used JavaScript, HTML, and CSS. Player can guess until they make five wrong guesses.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project4.png" alt="">
@@ -128,7 +128,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Information Dashboard</h2>
-                <p class="mb-0">adsf</p>
+                <p class="mb-0">A well-designed and visually appealing web dashboard, using JavaScript-driven charts and graphs. HTML, CSS, and JavaScript built from the ground up.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project5.png" alt="">
@@ -139,7 +139,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Employee Directory</h2>
-                <p class="mb-0">asdf</p>
+                <p class="mb-0">Implemented the Random User Generator API to create 12 random "employees". Used HTML, CSS, JavaScript, with an understanding of APIs and JSON objects.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/project6.png" alt="">
