--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <header class="masthead d-flex bg-black">
     <div class="container text-center my-auto">
       <h1 class="mb-1 text-white">CHRISTOPHER COUCH</h1>
-      <a class="btn btn-primary btn-sm js-scroll-trigger" href="#about">psyche</a>
+      <a class="btn btn-primary btn-sm js-scroll-trigger" href="#about">identity</a>
     </div>
   </header>
 
@@ -64,18 +64,18 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2 class="text-white">ABOUT</h2>
-          <p class="lead mb-5 text-white"><pre class="lead mb-5 text-white">
-Actively  searching for entry-level / junior software and web (UX / UI)
-development     positions   in   the   Portland    Metropolitan    Area.
+          <p class="lead mb-5 text-white">
+Actively searching for entry-level / junior software and web (UX / UI)
+development positions in the Portland Metropolitan Area.</p>
 
-Proficient  with  JavaScript, Python,  Ruby/Rails,  CSS,  Sass,  jQuery,
-React,  Node.js,  Popper.js,  Bootstrap  4,  AJAX,  XML, JSON, OOP, API,
-DOM,                               SVG,                            HTML.
+          <p class="lead mb-5 text-white">Proficient with JavaScript, Python, Ruby/Rails, CSS, Sass, jQuery,
+React, Node.js, Popper.js, Bootstrap 4, AJAX, XML, JSON, OOP, API,
+DOM, SVG, HTML.</p>
 
-Education,  skills,  and  abilities,  as  well   as   personal   contact
-information      is      all       found       in       my       <a href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank"><kbd>resume</kbd></a>.
+          <p class="lead mb-5 text-white">Education, skills, and abilities, as well as personal contact
+information is all found in my <a href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank"><kbd>resume</kbd></a>.</p>
 
-Open      to      all      software      development      opportunities.</pre></p>
+          <p class="lead mb-5 text-white">Open to all software development opportunities.</p>
           <a class="btn btn-light btn-sm js-scroll-trigger" href="#portfolio">portfolio</a>
         </div>
       </div>
