--- a/index.html
+++ b/index.html
@@ -67,18 +67,19 @@
           <p class="lead mb-5 text-white">Hey friends, I am a front-end software developer who truly enjoys
 what they do. I am happily married to my beautiful wife Krista and we live in the quite town of Sherwood, OR.</p>
           <p class="lead mb-5 text-white">
-I am currently searching for entry-level / junior software and web (UX / UI)
+Currently searching for entry-level / junior software and web (UX / UI)
 development positions in the Portland Metropolitan Area.</p>
 
           <p class="lead mb-5 text-white">Proficient with JavaScript, Python, Ruby/Rails, CSS, Sass, jQuery,
-React, Node.js, Popper.js, Bootstrap 4, AJAX, XML, JSON, OOP, API,
-DOM, SVG, HTML.</p>
+React, Node.js, Popper.js, Bootstrap 4, AJAX, XML, JSON, OOP, APIs,
+DOM, SVGs, and HTML. </p>
 
           <p class="lead mb-5 text-white">Education, skills, and abilities, as well as personal contact
-information are all found on my <a href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank"><kbd>resume</kbd></a>.</p>
+information are all found on my <a href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank"><kbd>resume</kbd></a>.
+I'm a fast learner and am on the way to be a full-stack JavaScript developer.</p>
 
           <p class="lead mb-5 text-white">Open to all software development opportunities, including start-ups,
-contracts, full-time and part-time positions, as well as internships or freelance work.</p>
+contracts, full-time and part-time positions, as well as internships, freelance work, and side-projects.</p>
           <a class="btn btn-light btn-sm js-scroll-trigger" href="#portfolio">portfolio</a>
         </div>
       </div>
