trying to add images to bottom

--- a/index.html
+++ b/index.html
@@ -223,6 +223,18 @@ contracts, full-time and part-time positions, as well as internships, freelance 
     </div>
   </footer>
 
+  <footer class="footer masthead d-flex bg-black text-center">
+    <div class="row">
+      <div class="column">
+        <img src="img/skiing.jpeg">
+        <img src="img/nordic.jpg">
+      </div>
+      <div class="column">
+        <img src="img/car.jpg">
+        <img src="img/cat.jpeg">
+      </div>
+    </div>
+
   <footer>
       <p class="text-muted small mb-0">Copyright &copy; Christopher Couch 2020</p>
   </footer>
