--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ I'm a fast learner and am on the way to be a full-stack JavaScript developer.</p
 
           <p class="lead mb-5 text-white">Open to all software development opportunities, including start-ups,
 contracts, full-time and part-time positions, as well as internships, freelance work, and side-projects.</p>
-          <a class="btn btn-light btn-sm js-scroll-trigger" href="#portfolio">portfolio</a>
+          <a class="btn btn-primary btn-light btn-sm js-scroll-trigger" href="#portfolio">portfolio</a>
         </div>
       </div>
     </div>
@@ -222,18 +222,6 @@ contracts, full-time and part-time positions, as well as internships, freelance 
       </ul>
     </div>
   </footer>
-
-  <footer class="footer masthead d-flex bg-black text-center">
-    <div class="row">
-      <div class="column">
-        <img src="img/skiing.jpeg">
-        <img src="img/nordic.jpg">
-      </div>
-      <div class="column">
-        <img src="img/car.jpg">
-        <img src="img/cat.jpeg">
-      </div>
-    </div>
 
   <footer>
       <p class="text-muted small mb-0">Copyright &copy; Christopher Couch 2020</p>
