added skills svgs

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
   <!-- THIS IS A TEST -->
+    <!-- https://github.com/edent/SuperTinyIcons -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -64,8 +65,106 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2 class="text-white">ABOUT</h2>
-          <p class="lead mb-5 text-white">Hey friends, I am a front-end software developer who truly enjoys
-what they do. I am happily married to my beautiful wife Krista and we live in the quite town of Sherwood, OR.</p>
+          <ul class="list-inline mb-5">
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                aria-label="Python" role="img"
+                viewBox="0 0 512 512"><rect
+                width="512" height="512"
+                rx="15%"
+                fill="#fff"/><g fill="#5a9fd4"><path id="p" d="M254 64c-16 0-31 1-44 4-39 7-46 21-46 47v35h92v12H130c-27 0-50 16-58 46-8 35-8 57 0 93 7 28 23 47 49 47h32v-42c0-30 26-57 57-57h91c26 0 46-21 46-46v-88c0-24-21-43-46-47-15-3-32-4-47-4zm-50 28c10 0 17 8 17 18 0 9-7 17-17 17-9 0-17-8-17-17 0-10 8-18 17-18z"/></g><use xlink:href="#p" fill="#ffd43b" transform="rotate(180,256,255)"/></svg></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i>
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  aria-label="React" role="img"
+                  viewBox="0 0 512 512"><rect
+                  width="512" height="512"
+                  rx="15%"
+                  fill="#fff"/><circle cx="256" cy="256" r="36" fill="#61dafb"/><path stroke="#61dafb" stroke-width="18" fill="none" d="M317.47 291.43a71 183 30 1 0-.05.09zm-122.89.09a183 71 60 1 0-.05-.09zm61.47 35.43a183 71 0 1 0-.1 0z"/></svg></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i><svg xmlns="http://www.w3.org/2000/svg"
+                aria-label="Sass" role="img"
+                viewBox="0 0 512 512"><rect
+                width="512" height="512"
+                rx="15%"
+                fill="#c69"/><path d="M258,88c-96,33-158,100-152,140s66,72,93,93h0c-35,18-79,45-78,80,2,48,54,33,76,19s44-53,30-94c31-8,58,2,66,8,31,22,15,47,4,51s-4,6,3,4,22-12,22-29c0-43-46-63-103-48-33-35-78-51-76-89,1-14,6-50,95-95s152-27,144,14c-12,62-120,104-158,68-2-4-9-7-5,4,20,50,182,27,189-79C410,79,329,64,258,88ZM172,408c-25,8-24-8-23-14,3-17,17-38,59-59C220,373,193,402,172,408Z" fill="#fff"/></svg></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                aria-label="JSON" role="img"
+                viewBox="0 0 512 512"><rect
+                width="512" height="512"
+                rx="15%"
+                fill="#fff"/><linearGradient id="a" x1="0.175" y1="0.15" x2="1" y2="0.85"><stop/><stop offset="1" stop-color="#fff"/></linearGradient><path id="b" fill="url(#a)" d="M256 64c-99 0-192 81-192 192 0 123 102 192 192 192-21 0-125-23-125-166 0-89 73-139 125-119 0 0 56 21 56 93s-56 93-56 93c51 20 125-27 125-119 0-129-87-166-125-166z"/><use transform="rotate(180 256 256)" xlink:href="#b"/></svg></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i>
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  aria-label="JavaScript" role="img"
+                  viewBox="0 0 512 512"><rect
+                  width="512" height="512"
+                  rx="15%"
+                  fill="#f7df1e"/><path d="m324,370c10,17 24,29 47,29 20,0 33,-10 33,-24 0,-16 -13,-22 -35,-32l-12,-5c-35,-15 -58,-33 -58,-72 0,-36 27,-64 70,-64 31,0 53,11 68,39l-37,24c-8,-15 -17,-21 -31,-21 -14,0 -23,9 -23,21 0,14 9,20 30,29l12,5c41,18 64,35 64,76 0,43 -34,67 -80,67 -45,0 -74,-21 -88,-49zm-170,4c8,13 14,25 31,25 16,0 26,-6 26,-30V203h48v164c0,50 -29,72 -72,72 -39,0 -61,-20 -72,-44z"/></svg></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                aria-label="Ruby On Rails" role="img"
+                viewBox="0 0 512 512"><rect
+                width="512" height="512"
+                rx="15%"
+                fill="#fff"/><g fill="#c00"><path d="M98 402c34-163 125-282 321-288v15c-121 33-180 118-159 273H98z"/><path d="M274 359l-4 27 30 13 1-27zM88 283l-13 36 34 10 13-35zM158 175l-25 27 31 23 25-30zM250 109l-27 19 21 24 28-18zM325 99l6 18 28-7-6-16zM359 169l13 20 16-15-7-16zM320 196l-17 18 23 27 12-19zM283 274l-8 25 31 18 1-27z"/></g></svg></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i>
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  aria-label="Django Project" role="img"
+                  viewBox="0 0 512 512"><rect
+                  width="512" height="512"
+                  rx="15%"
+                  fill="#113228"/><path fill="#fff" d="M227 101h56v257c-29 5-50 8-73 8-69 0-104-31-104-90 0-57 37-93 96-93 9 0 16 0 25 2zm0 129c-7-2-12-3-19-3-29 0-45 18-45 48s15 46 44 46c6 0 11 0 20-2zm145-44v129c0 45-3 66-13 84-9 18-21 29-46 42l-52-25c25-11 37-22 44-37 8-16 11-34 11-83V186zm-56-85h56v57h-56z"/></svg></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i>
+                  <svg xmlns="http://www.w3.org/2000/svg"
+                  aria-label="Windows" role="img"
+                  viewBox="0 0 512 512"><rect
+                  width="512" height="512"
+                  rx="15%"
+                  fill="#00adef"/><path fill="#fff" d="M98 145l127-18v123H98m142-125l168-24v148H240M98 263h127v123L98 368m142-104h168v147l-168-24"/></svg></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="social-link text-white mr-3">
+              <i>
+                  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                  aria-label="Raspberry Pi" role="img"
+                  viewBox="0 0 512 512" fill="#c51a4a"><rect
+                  width="512" height="512"
+                  rx="15%"
+                  fill="#fff"/><g transform="scale(2)"><g id="a"><path fill="#000" d="M129 63c-8-20-15-19-20-19-4-5-9-3-13-2-5-3-9-2-12 0-3-3-8-1-9 2-6-2-8 1-9 2-9-1-8 8-7 9-1 1-3 6 0 9-2 4 1 7 3 8-2 4 3 8 5 8 0 5 4 8 7 8-1 4 9 7 9 7-21 9-18 32-18 32-29 21-7 46-7 46s5 35 24 39c3 5 21 11 21 11s7 11 26 11"/><path fill="#6cc04a" d="M74 52l-4-4 12 2-3-4 9 3-2-4 9 4v-4l9 6v-5l8 7 v-4c22 22 4 29 4 29C99 64 79 58 79 58s26 13 35 24c0 0-4 15-30 9l3-3-9-2 3-2-9-4h6l-9-6h6l-9-6h5l-8-6l5-2l-5-7"/><path d="M69 133c-19 9-9 34-3 37s15-42 3-37m35-34c7 2-30 32-31 26 0-18 9-28 31-26m-5 65c-29-3-19-44 6-44s22 44-6 44m-26 8c-9 6 3 43 26 35 9-7-8-43-26-35"/></g><use xlink:href="#a" transform="matrix(-1 0 0 1 256 0)"/><path d="M106 216c17 24 45 5 44-2s-39-9-44 2m45-35c0-28-45-27-45 0s43 28 45 0m-43-75c5-15 34-15 40-1s-37 19-40 1"/></g></svg></i>
+            </a>
+          </li>
+          </ul>
+          <p class="lead mb-5 text-white">I am a front-end software developer who truly enjoys
+what they do. I am happily married to my beautiful wife Krista and we live in the quiet town of Sherwood, OR.</p>
           <p class="lead mb-5 text-white">
 Currently searching for entry-level / junior software and web (UX / UI)
 development positions in the Portland Metropolitan Area.</p>
