--- a/index.html
+++ b/index.html
@@ -350,6 +350,28 @@ contracts, full-time and part-time positions, as well as internships, freelance 
                 fill="#231f20"/><path d="m183 280 41 28 27 41 87-62-94-96"/><circle cx="340" cy="190" r="49"/><g fill="none" stroke="#ebebeb"><circle cx="179" cy="352" r="63" stroke-width="19"/><path d="m-18 271 195 81" stroke-width="80" stroke-linecap="round"/><circle cx="340" cy="190" r="81" stroke-width="32"/></g></svg></i>
           </a>
         </li>
+        <li class="list-inline-item">
+          <a class="social-link text-white mr-3" href="https://www.meetup.com/members/267750119/" target="_blank">
+            <i>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                aria-label="Meetup" role="img"
+                viewBox="0 0 512 512"><rect
+                width="512" height="512"
+                rx="15%"
+                fill="#ed1c40"/><path d="m335 138c6 1 21-16 54-7 57 17 11 98 4 113-10 19-53 101-13 109 18 4 46 0 42 26-3 27-65 13-77 7-52-22-39-77-14-118 10-21 45-70 23-78-14-5-29 34-34 45-6 12-44 86-52 98-20 32-57 16-49-11 11-35 56-116 29-120-14-2-21 14-25 23-8 16-38 102-53 134-19 40-99 23-85-37 5-23 34-113 40-129 12-30 24-69 70-70 13 0 33 15 47 20 14 4 24-24 50-26 32-2 31 20 43 21z" fill="#fff"/></svg></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link text-white mr-3" href="https://stackoverflow.com/users/story/11795715?view=Cv" target="_blank">
+            <i>
+              <svg xmlns="http://www.w3.org/2000/svg"
+              aria-label="Stack Overflow" role="img"
+              viewBox="0 0 512 512"><rect
+              width="512" height="512"
+              rx="15%"
+              fill="#f58025"/><path stroke="#fff" stroke-width="30" fill="none" d="M293 89l90 120zm-53 50l115 97zm-41 65l136 64zm-23 69l148 31zm-6 68h150zm-45-44v105h241V297"/></svg></i>
+          </a>
+        </li>
       </ul>
     </div>
   </footer>
