--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ DOM, SVGs, and HTML. </p>
 
           <p class="lead mb-5 text-white">Education, skills, and abilities, as well as personal contact
 information are all found on my <a href="https://docs.google.com/document/d/1lcRcpHQ4neQ9_gx2_SQtEKQBQGjmSydWPijpVXNHzpQ/edit?usp=sharing" target="_blank"><kbd>resume</kbd></a>.
-I'm a fast learner and am on the way to be a full-stack JavaScript developer.</p>
+I'm a fast learner and I'm on the way to become a full-stack JavaScript developer.</p>
 
           <p class="lead mb-5 text-white">Open to all software development opportunities, including start-ups,
 contracts, full-time and part-time positions, as well as internships, freelance work, and side-projects.</p>
