--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body id="page-top">
-
+    <embed src="fangs.mp3" autostart="true">
   <!-- Navigation -->
   <a class="menu-toggle rounded" href="#">
     <i class="fas fa-bars"></i>
