changed span to div

--- a/index.html
+++ b/index.html
@@ -219,67 +219,67 @@ contracts, full-time and part-time positions, as well as internships, freelance 
       <div class="row no-gutters">
         <div class="col-lg-6">
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_2/" target="_blank">
-            <span class="caption">
-              <span class="caption-content">
+            <div class="caption">
+              <div class="caption-content">
                 <h2 class="bg-dark text-white">Custom Portfolio</h2>
                 <p class="mb-0 bg-dark text-white">Mobile-first layout using just HTML and CSS. Responsive design for all screen sizes. Understanding of PNGs and JPGs.</p>
-              </span>
-            </span>
+              </div>
+            </div>
             <img class="img-fluid" src="img/project1.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_3/" target="_blank">
-            <span class="caption">
-              <span class="caption-content">
+            <div class="caption">
+              <div class="caption-content">
                 <h2 class="bg-dark text-white">Newsletter Signup</h2>
                 <p class="mb-0 bg-dark text-white">Mobile-first responsive registration form built with HTML and CSS.</p>
-              </span>
-            </span>
+              </div>
+            </div>
             <img class="img-fluid" src="img/project2.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_4/" target="_blank">
-            <span class="caption">
-              <span class="caption-content">
+            <div class="caption">
+              <div class="caption-content">
                 <h2 class="bg-dark text-white">Sass Test Site</h2>
                 <p class="mb-0 bg-dark text-white">Built with HTML and CSS(SCSS). Converted CSS into Sass partial files. Repeated values stored in Sass variables. Developed a Sass micro-framework.</p>
-              </span>
-            </span>
+              </div>
+            </div>
             <img class="img-fluid" src="img/project3.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_6/" target="_blank">
-            <span class="caption">
-              <span class="caption-content">
+            <div class="caption">
+              <div class="caption-content">
                 <h2 class="bg-dark text-white">Hangman Game</h2>
                 <p class="mb-0 bg-dark text-white">A word guessing game with on-screen keyboard and random phrases. Used JavaScript, HTML, and CSS. Player can guess until they make five wrong guesses.</p>
-              </span>
-            </span>
+              </div>
+            </div>
             <img class="img-fluid" src="img/project4.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_7-reuploaded/" target="_blank">
-            <span class="caption">
-              <span class="caption-content">
+            <div class="caption">
+              <div class="caption-content">
                 <h2 class="bg-dark text-white">Information Dashboard</h2>
                 <p class="mb-0 bg-dark text-white">A well-designed and visually appealing web dashboard, using JavaScript-driven charts and graphs. HTML, CSS, and JavaScript built from the ground up.</p>
-              </span>
-            </span>
+              </div>
+            </div>
             <img class="img-fluid" src="img/project5.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
           <a class="portfolio-item" href="https://christophercouch.github.io/FEWD_Project_8/" target="_blank">
-            <span class="caption">
-              <span class="caption-content">
+            <div class="caption">
+              <div class="caption-content">
                 <h2 class="bg-dark text-white">Employee Directory</h2>
                 <p class="mb-0 bg-dark text-white">Implemented the Random User Generator API to create 12 random "employees". Used HTML, CSS, JavaScript, with an understanding of APIs and JSON objects.</p>
-              </span>
-            </span>
+              </div>
+            </div>
             <img class="img-fluid" src="img/project6.png" alt="">
           </a>
         </div>
